fixed spacing on modal buttons

--- a/public/layout/css/fieldguide.css
+++ b/public/layout/css/fieldguide.css
@@ -1418,7 +1418,7 @@ hr {
     .modal .modal-interior .button.cancel, .modal .modal-interior .button.dry-run {
       background: none;
       color: #939598;
-      padding: 10px 210px 0 0; }
+      padding: 10px 180px 0 0; }
       .modal .modal-interior .button.cancel:hover, .modal .modal-interior .button.dry-run:hover {
         text-decoration: underline;
         color: #818387; }
@@ -2134,7 +2134,10 @@ hr {
       width: 100%;
       height: 100%;
       padding: 0;
-      margin: 0; }
+      margin: 0;
+      -moz-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+      -webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1); }
   #view-testing #testing-input {
     float: left;
     width: 55%;
